<resources>
<string name="app_name">AireTV</string>
<string name="contacts">Contacts</string>
<string name="edit">Edit</string>
<string name="sendmsg">Send</string>
<string name="textinput">Text Message</string>
<string name="nonetwork">No network, please try again…</string>
<string name="poornetwork">Alert!\nAireTV connection may be poor</string>
<string name="registrationerror">REGISTRATION/LOGIN ERROR! Please try later.</string>
<string name="register_nowifi">Registration requires Wifi to be enabled.
    \nPlease ENABLE Wifi in Wifi Settings.
    \n(You do not have to connect
    \nto any network)</string>
<string name="OK">OK</string>
<string name="next">Next</string>
<string name="newmessage">new message</string>
<string name="messages">Messages</string>
<string name="register">Register</string>
<string name="login">Log In</string>
<string name="cancel">Cancel</string>
<string name="clear">Clear</string>
<string name="compose_new">New Message</string>
<string name="sendto">To:</string>
<string name="attachment">attachment</string>
<string name="done">Done</string>
<string name="recording_vmemo">Recording…</string>
<string name="recording_timeup">time\'s up…</string>
<string name="i_agree">I\'ve read and agreed to the terms and conditions</string>
<string name="eula_disagree">You did not agree to the terms and conditions</string>
<string name="choose_attachment_type">select attachment type</string>
<string name="voicememo">Voice Message</string>
<string name="picmsg">Picture Message</string>
<string name="pickpicture">Photo gallery</string>
<string name="takepicture">Take a photo</string>
<string name="choose_photo_source">Source of photo</string>
<string name="setting">Settings</string>
<string name="server_ip">Server IP</string>
<string name="checkout">View</string>
<string name="reply">Reply</string>
<string name="close">Close</string>
<string name="ignore">Ignore</string>
<string name="delete_confirm">Confirm Deletion</string>
<string name="delete_thread_confirm">Delete all the messages?</string>
<string name="in_progress">Processing…</string>
<string name="in_call">in call…</string>
<string name="fafayou_in_call">AireTalk is in call</string>
<string name="answercallhint">slide to answer</string>
<string name="end_call">End</string>
<string name="hide_keypad">Hide</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="unknown_person">Unknown Contact</string>
<string name="missed_call">Missed call</string>
<string name="unanswered_call">Unanswered</string>
<string name="call_duration">Duration</string>
<string name="incoming_call">Incoming</string>
<string name="outgoing_call">Dialed</string>
<string name="phone_call">Dialer</string>
<string name="username">Username</string>
<string name="phonenumber">Phone number</string>
<string name="password">Password</string>
<string name="password_confirm">Confirm password</string>
<string name="email">Email</string>
<string name="email_hint">Email required</string>
<string name="register_immediately">Sign Up</string>
<string name="where_password">Password is forwarded to your email.\nPlease verify your email is correct.</string>
<string name="where_passwordspam">Please wait 5 minutes before trying again!</string>
<string name="forget_password">Forget password?</string>
<string name="passwords_dont_match">Sorry, passwords don\'t match</string>
<string name="password_error">Sorry, password is incorrect</string>
<string name="acc_unique">Sorry, Nickname and Email combination has been taken</string>
<string name="password_makeerror">Sorry, invalid password, at least 6 characters</string>
<string name="nonmember">Sorry, you are not an AireTalk member. Please register first.</string>
<string name="username_invalid">Sorry, this username is invalid. Must start with a lower case alphabet and be at least 6 characters.</string>
<string name="phonenumber_hint">Phone number required</string>
<string name="phonenumber_invalid">Sorry, the phone number you input is incorrect</string>
<string name="email_invalid">Sorry, the Email address is invalid</string>
<string name="login_title">Log In</string>
<string name="account_exists">AireTalk account already exists, please login</string>
<string name="retrieve_password">Retrieve password by your Email?</string>
<string name="waiting_for_sms_to_register">Registering via verification SMS has been sent.\nPlease wait…</string>
<string name="sms_confirm_timeout">Verification timeout, please make sure the phone number is correct and try it again</string>
<string name="welcome">Welcome to AireTV</string>
<string name="username_hint">Username (at least 6 letters)</string>
<string name="dial_this">Call</string>
<string name="delete_thread">Delete Conversation Thread</string>
<string name="delete_msg">Delete message</string>
<string name="view_contact">More</string>
<string name="add_contact">Add Contact</string>
<string name="pickup_contact">Pick Contacts</string>
<string name="surname">Last Name</string>
<string name="name">Name</string>
<string name="input_hint">Phone number to call</string>
<string name="go_friends">Friends</string>
<string name="location_not_found">Location not found</string>
<string name="nonmember_no_service">Contact not a member</string>
<string name="msg_is_sent">Message Sent</string>
<string name="making_call">Calling</string>
<string name="call_connected">Connected</string>
<string name="call_end">Call End</string>
<string name="call_declined">Line busy</string>
<string name="no_response">No Response</string>
<string name="callee_not_found">Please try later</string>
<string name="new_version_found">New version %s is available now, please upgrade.</string>
<string name="force_update">You must upgrade AireTalk to latest version.</string>
<string name="dont_worry">Don\'t worry, your data will not be affected.</string>
<string name="update">Update</string>
<string name="request_location_sharing">Request permission to share location? (Once agreed, your locations will be shared for an hour)</string>
<string name="sharing_location_request"> is requesting that you share each other\'s location for one hour. Allow?</string>
<string name="sharing_done">Location shared successfully</string>
<string name="displayname">Display Name</string>
<string name="photo_gallery">Photo Gallery</string>
<string name="friends">Friends</string>
<string name="copysms">Copy</string>
<string name="copied_to_clipboard">Copied to Clipboard</string>
<string name="mylocation_address">My Location</string>
<string name="friend_address">Location</string>
<string name="keypad">Keypad</string>
<string name="track">Track</string>
<string name="traffic">Traffic</string>
<string name="satellite">Satellite</string>
<string name="delete_the_contact">Delete the contact</string>
<string name="back">Back</string>
<string name="mute">mute</string>
<string name="speaker">speaker</string>
<string name="add_call">add call</string>
<string name="hold">hold</string>
<string name="missed_call_remind_1">You got %d missed call(s) from</string>
<string name="missed_call_remind_2">, %s. AireTalk reminds you to reply the important calls.</string>
<string name="pcode_desc">You might have received a verification SMS, please enter the 4-digit number:</string>
<string name="help">Help</string>
<string name="img_error">Invalid picture</string>
<string name="email_register">We\'ve sent a verification mail to your Email address, please activate your AireTalk account.</string>
<string name="login_error">Sorry, server is busy. Please wait for a moment, AireTalk will log in automatically.</string>
<string name="pwdemail_title">Input your phone number or username, we\'ll immediately send the password to your Email address.</string>
<string name="pwdemailfailed">Sending Password Email failed</string>
<string name="pwdemailsuccess">Email has been sent successfully</string>
<string name="no_sdcard">No SD Card or USB Storage Connected</string>
<string name="no_sdcard_receive_voice_message">no SD Card to receive voice message</string>
<string name="no_sdcard_receive_picture_message">no SD Card to receive the picture</string>
<string name="sms_manager">Manage SMS</string>
<string name="try_again">try again later</string>
<string name="share">Share Aire…</string>
<string name="smile">Smileys</string>
<string name="smiletitle">Emot\'icon</string>
<string name="keypad_menu_open">Key Tone On</string>
<string name="keypad_menu_close">Key Tone Off</string>
<string name="setnet">Go To</string>
<string name="add">Add</string>
<string name="auto_notify_joins">I am using AireTalk now! Please call me with this great app from now on! It\'s free! B-}</string>
<string name="international_sms_alert">This might be an international SMS, are you sure to continue?</string>
<string name="call">Call</string>
<string name="inc_volume">Ring Volume:</string>
<string name="inc_call_sett">Incoming Call:</string>
<string name="ringing_sound">Normal Ring</string>
<string name="ringing_led">LED</string>
<string name="voice_commands">Voice Answer</string>
<string name="notification_sound">Notification Sound</string>
<string name="receive_vibrate">Vibrate</string>
<string name="send_vibrate">Sending Vibrate</string>
<string name="smspopup">Message Pop-up</string>
<string name="pcode_check">Please enter 4-digit number</string>
<string name="net_error">No network connection…
    \nPlease check Settings.</string>
<string name="shownotification">Notification Icon</string>
<string name="agree_share_sms">I agree with you to share my location for %1$s.</string>
<string name="ask_share">(Location sharing request sent B-})</string>
<string name="photo_large">The photo is too big, cannot be sent.</string>
<string name="savedraft">Saved as draft</string>
<string name="hasaskshare">%1$s asks for location sharing with you</string>
<string name="helper_name1">Support</string>
<string name="helper_faq">FAQ</string>
<string name="helper_manual">Manual</string>
<string name="interphone_smile">Voice</string>
<string name="send_voice_interphone">Hold to talk</string>
<string name="fafauser_sms">SMS</string>
<string name="fafauser_vmemo">Voice</string>
<string name="fafauser_pic">Media</string>
<string name="fafauser_map">Locate</string>
<string name="hint_mood">Status Message</string>
<string name="add_photo">add\nphoto</string>
<string name="nickname">Name</string>
<string name="nickname_hint">Full Name</string>
<string name="eula_title">End User License Agreement</string>
<string name="personal_info">Please fill out your personal information.</string>
<string name="male">Male</string>
<string name="female">Female</string>
<string name="login_by_facebook">Sign in with Facebook</string>
<string name="facebook_login_desc">You may login directly to AireTalk by your facebook account</string>
<string name="read_contacts">AireTalk needs your permission to read the contacts. With the contact information, you may call and chat with your friends.</string>
<string name="read_contacts_check">Read your phonebook to search</string>
<string name="rotate_right">Rotate Right</string>
<string name="rotate_left">Rotate Left</string>
<string name="suggsay_text">Suggestion</string>
<string name="sugg_checkbox1">Poor audio quality</string>
<string name="sugg_checkbox2">Poor video quality</string>
<string name="sugg_checkbox3">Message lost</string>
<string name="sugg_checkbox4">No friends found</string>
<string name="sugg_checkbox5">Application crashes</string>
<string name="sugg_dis_text">Have you experienced any problems with AireTalk?</string>
<string name="delete">Delete</string>
<string name="device_add">Add Device</string>
<string name="device_add_hint">Detect Device</string>
<string name="device_name_setting">Set Name</string>
<string name="device_category_select">Select Category</string>
<string name="device">Device:</string>
<string name="category">Category:</string>
<string name="device_open">Turn On</string>
</resources>