<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tiled_bg">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">
            
            <ImageView
				android:id="@+id/logo"
				android:src="@drawable/aire_logo_small"
				android:gravity="center_horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:gravity="center"
	            android:text="@string/sugg_dis_text"
	            android:textColor="#808080"
	            android:textSize="15sp" />

            <CheckBox
                android:id="@+id/sugg_checkbox1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugg_checkbox1"
                android:textColor="#007192"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/sugg_checkbox2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugg_checkbox2"
                android:textColor="#007192"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/sugg_checkbox3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugg_checkbox3"
                android:textColor="#007192"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/sugg_checkbox4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugg_checkbox4"
                android:textColor="#007192"
                android:textSize="15sp"/>
            
            <CheckBox
                android:id="@+id/sugg_checkbox5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugg_checkbox5"
                android:textColor="#007192"
                android:textSize="15sp"/>
            
            <EditText android:id="@+id/suggsay_text"
				android:hint="@string/suggsay_text"
				android:background="@drawable/edit_bg"
				android:layout_marginTop="15dp"
				android:textColor="#007192"
				android:gravity="top"
				android:padding="6dp"
				android:maxLength="255"
				android:layout_margin="10dp"
				android:layout_width="fill_parent"
				android:layout_height="100dp"
				android:inputType="textMultiLine" 
				android:maxLines="9"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bluebtn"
                    android:layout_margin="10dp"
                    android:text="@string/back"
                    android:textColor="#f0f0f0"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:textSize="17sp"/>
              
                <Button
                    android:id="@+id/next"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bluebtn"
                    android:text="@string/sendmsg"
                    android:textColor="#f0f0f0"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>