<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:minWidth="240dp"
	android:maxWidth="300dp"
	android:maxHeight="240dp"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView 
		android:id="@+id/msgcontent"
		android:gravity="center"
		android:textColor="#000000"
		android:textSize="18sp"
		android:text="@string/pwdemail_title"
		android:layout_marginTop="5sp"
		android:layout_marginLeft="10sp"
		android:layout_marginRight="10sp"
		android:padding="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<EditText android:id="@+id/username"
	    android:background="@drawable/edit_bg"
		android:textColor="#ff445e8e"
		android:singleLine="true"
		android:maxLength="32"
		android:padding="5dp"
		android:textSize="18sp"
		android:hint="@string/username"
		android:inputType="textNoSuggestions"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_width="fill_parent"
		android:layout_height="46dp"
		android:visibility="gone"/>
	<Button 
		android:id="@+id/done" 
		android:text="@string/done"
		android:textSize="20sp"
		android:textColor="#ffffffff"
		android:background="@drawable/dialogbtn"
		android:gravity="center"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:shadowColor="#80000000"
  	  	android:shadowDx="2"
  	  	android:shadowDy="2"
  	  	android:shadowRadius="2"
  	  	android:padding="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>